events registered not showing shutterbug fixed

--- a/public/css/landing_style.css
+++ b/public/css/landing_style.css
@@ -206,7 +206,7 @@
   color: white;
   text-align: left;
   line-height: 5.4rem;
-  font-size: 3.2rem;
+  font-size: 3rem;
   font-weight: 400;
 }
 @media (max-width: 75em) {
